--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       </div>
       <div id="change-container">
         <button id="randomize">Randomize</button>
+        <button id="sort">Sort</button>
         <div id="sliders">
           <div class="slider-container">
             <label>Array Size</label>
@@ -65,9 +66,7 @@
           </div>
         </div>
       </div>
-      <div>
-        <button id="sort">Sort</button>
-      </div>
+      <div></div>
     </div>
 
     <script
