--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <button class="algo-btn">Merge Sort</button>
         <button class="algo-btn">Quicksort</button>
         <button class="algo-btn">Heapsort</button>
+        <button id="sort" style="margin-left: 10px">Sort</button>
         <!-- <input
           type="text"
           id="user-input"
@@ -44,7 +45,7 @@
       </div>
       <div id="change-container">
         <button id="randomize">Randomize</button>
-        <button id="sort">Sort</button>
+
         <div id="sliders">
           <div class="slider-container">
             <label>Array Size</label>
